added github link to index page

--- a/index.Rmd
+++ b/index.Rmd
@@ -22,3 +22,5 @@ output:
 ![](images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_7347_FRD_(cropped).jpg)
 
 ## Screencast
+
+[GitHub Repo](https://github.com/glj2117/p8105_final_website.io)
