--- a/index.Rmd
+++ b/index.Rmd
@@ -24,5 +24,7 @@ output:
 ## Screencast
 [Screencast](https://youtu.be/e6ylMwhOCwU)
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e6ylMwhOCwU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ## GitHub Repo Link
 [GitHub Repo](https://github.com/glj2117/p8105_final_website.io)
