--- a/project_report.Rmd
+++ b/project_report.Rmd
@@ -81,8 +81,7 @@ The data used for this project came from the following publicly available source
   NYC Open Data provides location data on annual restaurant inspections throughout New York City. This dataset allowed us to identify NYC-specific restaurants in the MenuStat dataset. Only restaurants that were found in both datasets were included in our analyses for this project (n=54). We achieved this by creating a new variable `dba` that included only restaurants identified in the MenuStat dataset. The restaurant inspections dataset was then filtered for only the restaurant type of `dba`, and other relevant variables, such as borough and zipcode, were selected to conduct location-based analyses. 
 	Additionally, for the purpose of the statistical analyses, we summarised the number of occurrences of a restaurant type (`rest_type`) within a zip code thereby creating a new column with count data. Then, we used `pivot_wider` to move our row-wise count metrics to column variables for each restaurant type that corresponded to each zip code. For linear regression analysis, we calculated the proportions of a specific restaurant type within a zip code to be later used as our outcome of interest. For logistic analysis, we used `ifelse` statements to create binary outcome variables for restaurant types `sit_down` and `fast_food` that indicated if they were present in a zip code. However, in the case of `fast_food` we observed a high prevalence across all zip codes so to allow our logit model to converge, we used the median number of fast-food restaurants found across all zip codes as a condition to separate high and low prevalence (`fast_food` > 10).  
 
-[American Community Survey (ACS) mean income, demographic and housing estimate data]
-(https://data.census.gov/cedsci/table?q=population%20demographics%20income&g=0400000US36%248600000&tid=ACSST5Y2020.S1902) 
+[American Community Survey (ACS) mean income, demographic and housing estimate data](https://data.census.gov/cedsci/table?q=population%20demographics%20income&g=0400000US36%248600000&tid=ACSST5Y2020.S1902) 
   The American Community Survey (ACS) provides annual sampling data that is based on approximately 3 million households across the United States. We used 5-year community survey estimates to obtain sociodemographic data at the zip code tabulation area (ZCTA) level for New York, NY. ACS data was obtained using a unique Census API Key and imported using `tidycensus` package version 1.3. Before loading 5-year ACS estimates, we specified New York state and at the ZCTA geography level for the years 2015 to 2019. We identified eleven variable codes that corresponded with sociodemographic variables of interest and were available across all years.
   We included sociodemographic variables such as median household income, total population (continuous), race (categorical), and sex (binary). For race, we created a summary metric for non-White, non-Other racial categories that summed counts for Black, Asian, American Indian/Alaskan Native, and Hawaiian/Pacific Islander later renamed `bipoc` (black, indigenous, people of color) as a measure to adjust for the low values observed in some categories.
 The imported data frame from `tidycensus` was manipulated into a wide dataformat and further used to mutate proportions of race and biological sex by ZCTA. 
